@@ -1,0 +1,3 @@
+Tests the default behaviour of the program in regard to the output fields.
+Since the '--columns' option is not in effect, only fields from the default
+field set should be printed.
