@@ -1,0 +1,162 @@
+#------------------------------------------------------------------------------
+#$Date: 2017-08-14 18:27:20 +0300 (Mon, 14 Aug 2017) $
+#$Revision: 199748 $
+#$URL: svn://www.crystallography.net/cod/cif/2/00/00/2000000.cif $
+#------------------------------------------------------------------------------
+#
+# This file is available in the Crystallography Open Database (COD),
+# http://www.crystallography.net/
+#
+# All data on this site have been placed in the public domain by the
+# contributors.
+#
+data_2000000
+loop_
+_publ_author_name
+'A. Gonzalez'
+'A. Beltran'
+'A. le Bail'
+_publ_section_title
+' Structure of the decahydrated octaacetate of dineodymium(III) and cobalt(II)'
+_journal_coeditor_code           PA0193
+_journal_name_full               'Acta Crystallographica Section C'
+_journal_page_first              1624
+_journal_page_last               1627
+_journal_paper_doi               10.1107/S0108270191002184
+_journal_volume                  47
+_journal_year                    1991
+_chemical_formula_sum            'C16 H44 Co Nd2 O26'
+_symmetry_cell_setting           triclinic
+_symmetry_Int_Tables_number      2
+_symmetry_space_group_name_Hall  '-P 1'
+_symmetry_space_group_name_H-M   'P -1'
+_cell_angle_alpha                111.64(1)
+_cell_angle_beta                 107.94(1)
+_cell_angle_gamma                93.45(1)
+_cell_formula_units_Z            1
+_cell_length_a                   8.243(2)
+_cell_length_b                   10.368(3)
+_cell_length_c                   11.497(3)
+_cell_volume                     851.974
+_diffrn_ambient_temperature      ?
+_exptl_crystal_colour            purple
+_exptl_crystal_density_diffrn    1.95
+_refine_ls_R_factor_gt           0.024
+_refine_ls_wR_factor_gt          0.024
+_cod_depositor_comments
+;
+ Removing 43 symmetrically equivalent atoms:
+
+ O1A* O -0.1104(2) 0.8680(2) 0.4334(2)
+ Nd1A* Nd -0.08652(1) 1.08111(1) 0.66796(1)
+ O3A* O -0.1692(2) 1.0466(2) -0.1531(1)
+ O5A* O 0.0662(2) 0.8389(2) -0.1408(2)
+ O7A* O 0.2041(2) 1.1639(2) 0.0437(2)
+ C3A* C -0.2321(3) 0.7938(2) 0.4401(2)
+ O2A* O -0.2765(3) 0.8393(2) 0.5409(2)
+ O3A** O -0.1692(2) 1.0466(2) 0.8469(1)
+ O4A* O -0.3817(2) 1.0831(2) 0.7013(2)
+ O6A* O 0.1046(2) 0.9221(2) 0.7138(2)
+ O8A* O 0.1406(3) 1.2272(2) 0.8714(2)
+ O9A* O -0.2875(2) 1.1095(2) 0.4687(2)
+ O11A* O -0.1131(3) 1.3334(2) 0.7388(3)
+ Nd1A** Nd -0.08652(1) 1.08111(1) -0.33204(1)
+ C1A* C -0.3266(2) 1.0634(2) -0.1939(2)
+ C4A* C 0.1002(3) 0.8257(2) -0.2435(2)
+ C2A* C 0.2295(2) 1.2432(2) -0.0125(2)
+ C7A* C -0.3274(5) 0.6558(3) 0.3268(3)
+ C1A** C -0.3266(2) 1.0634(2) 0.8061(2)
+ C4A** C 0.1002(3) 0.8257(2) 0.7565(2)
+ C2A** C 0.2295(2) 1.2432(2) 0.9875(2)
+ H1A* H -0.1991(49) 1.0767(52) 0.4270(49)
+ H2A* H -0.4008(33) 1.0409(43) 0.4152(46)
+ H5A* H -0.0390(56) 1.4191(32) 0.8194(36)
+ H6A* H -0.2211(42) 1.3588(50) 0.6907(47)
+ O4A** O -0.3817(2) 1.0831(2) -0.2987(2)
+ C5A* C -0.4411(3) 1.0576(4) -0.1169(3)
+ O6A** O 0.1046(2) 0.9221(2) -0.2862(2)
+ C8A* C 0.1363(7) 0.6850(3) -0.3215(4)
+ O8A** O 0.1406(3) 1.2272(2) -0.1286(2)
+ C6A* C 0.3757(4) 1.3703(3) 0.0662(3)
+ H17A* H -0.2961(67) 0.6425(61) 0.2390(32)
+ H18A* H -0.2674(60) 0.5865(49) 0.3702(53)
+ H19A* H -0.4668(10) 0.6302(53) 0.2990(51)
+ H11A* H -0.3756(64) 1.0464(52) -0.0251(27)
+ H12A* H -0.5401(51) 1.1197(47) -0.1042(48)
+ H13A* H -0.5008(60) 0.9540(25) -0.1971(33)
+ H20A* H 0.0448(44) 0.6468(52) -0.2858(44)
+ H21A* H 0.0895(55) 0.6350(55) -0.4296(5)
+ H22A* H 0.2612(32) 0.6601(59) -0.2816(46)
+ H14A* H 0.4444(58) 1.3882(57) 0.0056(45)
+ H15A* H 0.3174(64) 1.4601(37) 0.1033(46)
+ H16A* H 0.4657(52) 1.3566(56) 0.1497(31)
+
+ Antanas Vaitkus,
+ 2017-08-14
+;
+_cod_original_formula_sum        'C16 H44 Co1 Nd2 O26'
+_cod_database_code               2000000
+loop_
+_symmetry_equiv_pos_site_id
+_symmetry_equiv_pos_as_xyz
+1 x,y,z
+2 -x,-y,-z
+loop_
+_atom_site_label
+_atom_site_type_symbol
+_atom_site_fract_x
+_atom_site_fract_y
+_atom_site_fract_z
+Nd1 Nd 0.08652(1) 0.91889(1) 0.33204(1)
+Co1 Co 0.00000 1.00000 0.00000
+O1 O 0.1104(2) 1.1320(2) 0.5666(2)
+O2 O 0.2765(3) 1.1607(2) 0.4591(2)
+O3 O 0.1692(2) 0.9534(2) 0.1531(1)
+O4 O 0.3817(2) 0.9169(2) 0.2987(2)
+O5 O -0.0662(2) 1.1611(2) 0.1408(2)
+O6 O -0.1046(2) 1.0779(2) 0.2862(2)
+O7 O -0.2041(2) 0.8361(2) -0.0437(2)
+O8 O -0.1406(3) 0.7728(2) 0.1286(2)
+O9 O 0.2875(2) 0.8905(2) 0.5313(2)
+O10 O 0.3925(3) 0.2934(2) 0.3264(2)
+O11 O 0.1131(3) 0.6666(2) 0.2612(3)
+O12 O 0.0941(4) 0.6002(3) 0.9368(3)
+O13 O 0.3018(4) 0.5562(3) 0.4230(3)
+C1 C 0.3266(2) 0.9366(2) 0.1939(2)
+C2 C -0.2295(2) 0.7568(2) 0.0125(2)
+C3 C 0.2321(3) 1.2062(2) 0.5599(2)
+C4 C -0.1002(3) 1.1743(2) 0.2435(2)
+C5 C 0.4411(3) 0.9424(4) 0.1169(3)
+C6 C -0.3757(4) 0.6297(3) -0.0662(3)
+C7 C 0.3274(5) 1.3442(3) 0.6732(3)
+C8 C -0.1363(7) 1.3150(3) 0.3215(4)
+H1 H 0.1991(49) 0.9233(52) 0.5730(49)
+H2 H 0.4008(33) 0.9591(43) 0.5848(46)
+H3 H 0.2912(38) 0.2807(64) 0.2454(35)
+H4 H 0.3530(57) 0.2516(60) 0.3812(44)
+H5 H 0.0390(56) 0.5809(32) 0.1806(36)
+H6 H 0.2211(42) 0.6412(50) 0.3093(47)
+H7 H 0.1026(80) 0.6802(33) 0.9088(47)
+H8 H 0.0848(80) 0.6363(46) 1.0277(25)
+H9 H 0.3767(53) 0.4899(43) 0.3897(51)
+H10 H 0.3767(53) 0.6421(36) 0.5032(39)
+H11 H 0.3756(64) 0.9536(52) 0.0251(27)
+H12 H 0.5401(51) 0.8803(47) 0.1042(48)
+H13 H 0.5008(60) 1.0460(25) 0.1971(33)
+H14 H -0.4444(58) 0.6118(57) -0.0056(45)
+H15 H -0.3174(64) 0.5399(37) -0.1033(46)
+H16 H -0.4657(52) 0.6434(56) -0.1497(31)
+H17 H 0.2961(67) 1.3575(61) 0.7610(32)
+H18 H 0.2674(60) 1.4135(49) 0.6298(53)
+H19 H 0.4668(10) 1.3698(53) 0.7010(51)
+H20 H -0.0448(44) 1.3532(52) 0.2858(44)
+H21 H -0.0895(55) 1.3650(55) 0.4296(5)
+H22 H -0.2612(32) 1.3399(59) 0.2816(46)
+loop_
+_atom_type_symbol
+_atom_type_radius_bond
+C 0.68
+H 0.23
+Co 1.33
+Nd 1.81
+O 0.68
