@@ -1,0 +1,40 @@
+<?xml version="1.0"?>
+<rdf:RDF xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+         xmlns:cod="http://www.crystallography.net/cod/doc/rdf/">
+  <rdf:Description rdf:about="http://www.crystallography.net/cod/2000000.html">
+    <cod:Robs>0.024</cod:Robs>
+    <cod:Z>1</cod:Z>
+    <cod:Zprime>0.5</cod:Zprime>
+    <cod:a>8.243</cod:a>
+    <cod:acce_code>PA0193</cod:acce_code>
+    <cod:alpha>111.64</cod:alpha>
+    <cod:author>A. Gonzalez</cod:author>
+    <cod:author>A. Beltran</cod:author>
+    <cod:author>A. le Bail</cod:author>
+    <cod:b>10.368</cod:b>
+    <cod:beta>107.94</cod:beta>
+    <cod:c>11.497</cod:c>
+    <cod:calcformula>C16 H44 Co Nd2 O26</cod:calcformula>
+    <cod:cellformula>C16 H44 Co Nd2 O26</cod:cellformula>
+    <cod:doi>10.1107/S0108270191002184</cod:doi>
+    <cod:firstpage>1624</cod:firstpage>
+    <cod:formula>C16 H44 Co Nd2 O26</cod:formula>
+    <cod:gamma>93.45</cod:gamma>
+    <cod:journal>Acta Crystallographica Section C</cod:journal>
+    <cod:lastpage>1627</cod:lastpage>
+    <cod:nel>5</cod:nel>
+    <cod:sg>P -1</cod:sg>
+    <cod:sgHall>-P 1</cod:sgHall>
+    <cod:siga>0.002</cod:siga>
+    <cod:sigalpha>0.01</cod:sigalpha>
+    <cod:sigb>0.003</cod:sigb>
+    <cod:sigbeta>0.01</cod:sigbeta>
+    <cod:sigc>0.003</cod:sigc>
+    <cod:siggamma>0.01</cod:siggamma>
+    <cod:title>Structure of the decahydrated octaacetate of dineodymium(III) and cobalt(II)</cod:title>
+    <cod:vol>851.974</cod:vol>
+    <cod:volume>47</cod:volume>
+    <cod:wRobs>0.024</cod:wRobs>
+    <cod:year>1991</cod:year>
+  </rdf:Description>
+</rdf:RDF>
