@@ -1,0 +1,14 @@
+<?xml version="1.0"?>
+<rdf:RDF xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+         xmlns:cod="http://www.crystallography.net/cod/doc/rdf/">
+  <rdf:Description rdf:about="http://www.crystallography.net/cod/2000000.html">
+    <cod:a>8.243</cod:a>
+    <cod:alpha>111.64</cod:alpha>
+    <cod:b>10.368</cod:b>
+    <cod:beta>107.94</cod:beta>
+    <cod:c>11.497</cod:c>
+    <cod:doi>10.1107/S0108270191002184</cod:doi>
+    <cod:gamma>93.45</cod:gamma>
+    <cod:year>1991</cod:year>
+  </rdf:Description>
+</rdf:RDF>
