@@ -23,6 +23,8 @@ cod-tools (unreleased)
         - changed the space group IT number in the descriptions of
           the 'F d 1 1', 'F 1 d 1', 'F 1 1 d' and 'C 1 c 1 (a-3/8,b-3/8,a+2*c)'
           space groups from '15' to '9'.
+    - cif2rdf:
+        - fixed the handling of the '--columns' option.
     - cif_cod_check:
         - added the missing File::Basename::dirname() subroutine import.
     - cif_ddlm_dic_check:
